feat: 입력된 구입 금액이 1,000원 단위가 아니면 예외를 던져라